[tool.poetry]
name = "onto_cui-main"
version = "0.1.0"
description = ""
authors = ["Helene de Ribaupierre <helene.deribaupierre@frontiersin.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Owlready2 = "^0.39"
flask-access = "^0.1.2"
Flask-Zipper = "^1.0.1"
Flask = "^2.2.2"
Cython = "^0.29.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
